fix(frontend): fixed layout issues

--- a/frontend/src/app/Layout.module.css
+++ b/frontend/src/app/Layout.module.css
@@ -37,5 +37,6 @@
   flex: 1;
   display: flex;
   justify-content: center;
+  align-items: center;
   padding: var(--space-8);
 }
